Added frontend to compare statements

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,10 @@
     <h2>Statement Comparator</h2>
     <form action="/compare" method="post">
         <label for="stmt1">Statement 1:</label><br>
-        <textarea id="stmt1" name="stmt1"></textarea><br>
+        <textarea id="stmt1" name="stmt1">{{ stmt1 }}</textarea><br>
 
         <label for="stmt2">Statement 2:</label><br>
-        <textarea id="stmt2" name="stmt2"></textarea><br>
+        <textarea id="stmt2" name="stmt2">{{ stmt2 }}</textarea><br>
 
         <button type="submit">Compare</button>
     </form>
